<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.intern.plb6.ui.register.RegisterViewModel" />

        <variable
            name="navigator"
            type="com.intern.plb6.ui.register.RegisterNavigator" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_primary"
        tools:context=".ui.register.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/top_login"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/font_22"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_32"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_8"
                android:autofillHints="@null"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_baseline_mail_outline_24"
                android:drawablePadding="@dimen/dimen_8"
                android:elevation="@dimen/dimen_8"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:paddingVertical="@dimen/dimen_12"
                android:paddingStart="@dimen/dimen_16"
                android:textColor="@color/white"
                android:textColorHint="@color/color_hint"
                android:textSize="@dimen/font_16"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_8"
                android:autofillHints="@null"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="@dimen/dimen_8"
                android:elevation="@dimen/dimen_8"
                android:hint="@string/enter_your_name"
                android:maxLines="1"
                android:paddingVertical="@dimen/dimen_12"
                android:paddingStart="@dimen/dimen_16"
                android:textColor="@color/white"
                android:textColorHint="@color/color_hint"
                android:textSize="@dimen/font_16"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_8"
                android:autofillHints="@null"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="@dimen/dimen_8"
                android:elevation="@dimen/dimen_8"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/dimen_12"
                android:paddingStart="@dimen/dimen_16"
                android:textColor="@color/white"
                android:textColorHint="@color/color_hint"
                android:textSize="@dimen/font_16"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

            <EditText
                android:id="@+id/edtConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_8"
                android:autofillHints="@null"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="@dimen/dimen_8"
                android:elevation="@dimen/dimen_8"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/dimen_12"
                android:paddingStart="@dimen/dimen_16"
                android:textColor="@color/white"
                android:textColorHint="@color/color_hint"
                android:textSize="@dimen/font_16"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/phone"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_8"
                android:autofillHints="@null"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="@dimen/dimen_8"
                android:elevation="@dimen/dimen_8"
                android:hint="@string/enter_your_phone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="@dimen/dimen_12"
                android:paddingStart="@dimen/dimen_16"
                android:textColor="@color/white"
                android:textColorHint="@color/color_hint"
                android:textSize="@dimen/font_16"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mg_start_login"
                android:layout_marginTop="@dimen/dimen_24"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14"
                android:onClick="@{() -> navigator.register()}"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginBottom="@dimen/dimen_16"
            android:gravity="center"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/have_an_account_sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

