<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_primary"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/bg_primary">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatartInfoImageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_user_1" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:textColor="@color/white"
            android:layout_marginLeft="51dp"
            android:textSize="@dimen/font_12"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:enabled="false"
            android:text="aaaaaaaa"
            android:padding="@dimen/dimen_8"
            android:textSize="@dimen/font_16"
            android:background="@drawable/bg_input_8"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:textColor="@color/white"
            android:layout_marginLeft="51dp"
            android:textSize="@dimen/font_12"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_4"
            android:background="@drawable/bg_input_8"
            android:layout_marginHorizontal="48dp"
            android:enabled="false"
            android:textSize="@dimen/font_16"
            android:text="asdjklsajdklasdjalksd"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:textSize="@dimen/font_12"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginHorizontal="48dp"
            android:background="@drawable/bg_input_8"
            android:padding="@dimen/dimen_8"
            android:enabled="false"
            android:text="9191292192"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="@dimen/dimen_16"
            android:textSize="@dimen/font_12"
            android:textColor="@color/white"
            android:text="@string/date_of_birth" />

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:padding="@dimen/dimen_8"
            android:background="@drawable/bg_input_8"
            android:enabled="false"
            android:text="asdasdsad"
            android:textSize="@dimen/font_16"
            android:layout_marginTop="@dimen/dimen_4"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
