<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dimen_16">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:gravity="center"
            android:text="@string/choose_movie_theater"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_dialog_text"
            android:textSize="@dimen/font_22"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lyCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle">

            <TextView
                android:id="@+id/txtCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_weight="2"
                android:text="@string/city"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_dialog_text"
                android:textSize="@dimen/font_16" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spnCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyTheater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:weightSum="5"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyTheater">

            <TextView
                android:id="@+id/txtTheater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_weight="2"
                android:text="@string/movie_theater"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_dialog_text"
                android:textSize="@dimen/font_16" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spnTheater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_30"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@android:string/cancel"
                android:textColor="@color/blue"
                android:textSize="@dimen/font_14" />

            <TextView
                android:id="@+id/txtExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_exit"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_8"
                android:text="@android:string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>